fix: make mod priority list Java 8 compatible